--- a/01.monster_rolodex/src/App.css
+++ b/01.monster_rolodex/src/App.css
@@ -1,15 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Roboto+Mono:wght@100;200;300;400;500&display=swap");
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto Mono", monospace;
   background: linear-gradient(
     to left,
     rgba(7, 27, 82, 1) 0%,
     rgba(0, 128, 128, 1) 100%
   );
   text-align: center;
+}
+.app-title {
+  font-size: 75px;
+  color: #0ccac4;
+  font-family: "Bigelow Rules", serif;
 }
